[package]
name = "vesto2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesto2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.0", features = ["token"] }
